maze.pledge.PledgeMaze.scala.error
Compilation error:
PledgeMaze:21: error: method leftFollowerMode has return statement; needs result type
      return();
      ^PledgeMaze:27: error: not found: value sommeAngle
            sommeAngle += 1;
            ^PledgeMaze:31: error: not found: value sommeAngle
              sommeAngle += 1;
              ^PledgeMaze:35: error: not found: value sommeAngle
        } else { right(); sommeAngle -= 1;} 
                          ^PledgeMaze:60: error: too many arguments for method leftFollowerMode: ()Unit
                 }; leftFollowerMode(sommeAngle); state = 0;
                                    ^